--- a/src/main/webapp/resources/css/protocollo.css
+++ b/src/main/webapp/resources/css/protocollo.css
@@ -3,7 +3,9 @@
 .preHeader p {margin:0;vertical-align:middle;display:inline-block;line-height: 32px;}
 .dropZoneInfo {border: 2px dotted #337ab7;}
 
-#dropzone {background: palegreen;text-align: center;font-weight: bold;}
-#dropzone.in {width: 600px;height: 200px;line-height: 200px;font-size: larger;}
-#dropzone.hover {background: lawngreen;}
+#dropzone {background: #e9f1e9;text-align: center;font-weight: bold;}
+/* #dropzone.in {width: 600px;height: 200px;line-height: 200px;font-size: larger;} */
+#dropzone.in {border: 3px dotted #6581e8;font-size: larger;}
+/* #dropzone.hover {background: lawngreen;} */
+#dropzone.hover {border: 3px dotted #6581e8;font-size: larger;}
 #dropzone.fade {-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-ms-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;opacity: 1;}
