--- a/src/main/webapp/resources/css/protocollo.css
+++ b/src/main/webapp/resources/css/protocollo.css
@@ -18,3 +18,5 @@ mark{background: #31708f !important; color: white !important; font-weight: bold 
 .ul_calendari{width: 100%;text-align: center;}
 .f_left{float: left;}
 .f_right{float: right;}
+
+.two-columns {-webkit-column-count: 2;-moz-column-count: 2;column-count: 2;-webkit-column-gap: 40px;column-gap: 40px;-moz-column-gap: 40px;}
